--- a/app/src/main/res/layout/sampleview_home_post_item.xml
+++ b/app/src/main/res/layout/sampleview_home_post_item.xml
@@ -70,5 +70,15 @@
             app:layout_constraintStart_toStartOf="@+id/home_description"
             app:layout_constraintTop_toBottomOf="@+id/home_description" />
 
+        <ProgressBar
+            android:id="@+id/sampleview_home_post_progressbar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/zoominimageview_item_photo"
+            app:layout_constraintEnd_toEndOf="@+id/zoominimageview_item_photo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/zoominimageview_item_photo" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
