--- a/app/src/main/res/layout/sampleview_image_slider.xml
+++ b/app/src/main/res/layout/sampleview_image_slider.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linerarlayot_for_image_border"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -11,9 +14,27 @@
         android:id="@+id/imageview_slider_item"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/rent_type_picture">
+        android:src="@drawable/rent_type_picture"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     </ImageView>
 
-</LinearLayout>
+    <ProgressBar
+        android:id="@+id/imageview_slider_progressbar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/imageview_slider_item"
+        app:layout_constraintEnd_toEndOf="@+id/imageview_slider_item"
+        app:layout_constraintStart_toStartOf="@+id/imageview_slider_item"
+        app:layout_constraintTop_toTopOf="@+id/imageview_slider_item" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
