--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
+                <EditText
                     android:id="@+id/et_mobile_no"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
